# StreamKit

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists_src.txt  CMakePresets.json  CMakePresets_src.json  EXECUTION_PLAN.md  EXIT_MECHANISMS.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  Plant.md  README.md  README_DECODER_ARCHITECTURE.md  build.bat  check_decoders.cpp  config_example.json  seek_performance_results.txt  vcpkg.json
.claude/: current_plan.md  project_agents.json  settings.local.json
.claude/agents/: architect.md  debugger.md  implementer.md  planner.md  refactorer.md  reviewer.md  uiux_designer.md
apps/editor/: CMakeLists.txt
apps/editor/qml/: Main.qml
apps/editor/qml/components/: MediaBrowser.qml  PropertyPanel.qml  Timeline.qml  TimelineClip.qml  TimelineTrack.qml  Toolbar.qml  TransportControls.qml  VideoPreview.qml
apps/editor/src/: main.cpp  theme.hpp
apps/editor/src/controllers/: preview_controller.cpp  preview_controller.hpp  project_controller.cpp  project_controller.hpp  timeline_controller.cpp  timeline_controller.hpp
examples/: usage_example.cpp
include/common/: config.hpp  error_recovery.hpp  logger.hpp  raii_wrappers.hpp
include/cuda/: cuda_processor.hpp
include/video/: decoder_base.hpp  decoder_factory.hpp  encoder.hpp  hardware_decoder.hpp  software_decoder.hpp  timestamp_manager.hpp
phoenix/core/: CMakeLists.txt
phoenix/core/include/phoenix/core/: clock.hpp  logger.hpp  lru_cache.hpp  object_pool.hpp  result.hpp  ring_buffer.hpp  signals.hpp  types.hpp  uuid.hpp
phoenix/core/src/: logger.cpp  uuid.cpp
phoenix/engine/: CMakeLists.txt
phoenix/engine/include/phoenix/engine/: compositor.hpp  frame_cache.hpp  playback_engine.hpp
phoenix/media/: CMakeLists.txt
phoenix/media/include/phoenix/media/: codec_types.hpp  decoder.hpp  decoder_pool.hpp  frame.hpp  media_info.hpp
phoenix/media/src/: decoder.cpp  decoder_pool.cpp  frame.cpp  media_info.cpp
phoenix/media/src/ffmpeg/: ff_common.hpp  frame_impl.hpp  shared_avframe.hpp
phoenix/model/: CMakeLists.txt
phoenix/model/include/phoenix/model/: clip.hpp  media_bin.hpp  media_item.hpp  project.hpp  sequence.hpp  track.hpp
phoenix/model/include/phoenix/model/commands/: clip_commands.hpp  command.hpp  undo_stack.hpp
phoenix/model/include/phoenix/model/io/: project_io.hpp
phoenix/model/src/: project_io.cpp
src/: main.cpp  performance_summary.cpp
src/codec/ffmpeg/: ff_utils.hpp  shared_avframe.hpp
src/common/: config.cpp  error_recovery.cpp  logger.cpp
src/core/: clock.hpp  media_frame.hpp  object_pool.hpp  result.hpp  ring_buffer.hpp  types.hpp
src/cuda/: cuda_processor.cpp
src/editor/: main.cpp  videocontroller.cpp  videocontroller.hpp
src/editor/qml/: Main.qml  Sidebar.qml  Timeline.qml  TransportControls.qml  VideoPreview.qml
src/graph/: async_queue.hpp  concepts.hpp  node.hpp  pin.hpp  pipeline.hpp
src/nodes/: audio_decode_node.hpp  audio_sink_node.hpp  decode_node.hpp  source_node.hpp  video_sink_node.hpp
src/render/: renderer.hpp  sdl_renderer.hpp
src/video/: decoder_base.cpp  decoder_factory.cpp  encoder.cpp  hardware_decoder.cpp  software_decoder.cpp  timestamp_manager.cpp
